test/integration/good/tuples/infer_tuple_ad.stan
parameters {
  real x;
}
model {
  array[2] tuple(real, real) z = {(1,x),(x,1)};
}
