test/integration/bad/data_index/non_data_index3.stan
parameters {
  array[3] real y;

}
transformed parameters {
  row_vector[size(y)] z;
}
